<resources>
    <string name="app_name">Фильмы онлайн</string>
    <string name="todo">Загрузка…</string>
    <string name="example_title">Загрузка…</string>
    <string name="raiting">Рейтинг:</string>
    <string name="year">Год:</string>
    <string name="age">Возраст:</string>
    <string name="premiera">Премьера:</string>
    <string name="time">Время:</string>
    <string name="role">В ролях:</string>
    <string name="director">Режиссёр:</string>
    <string name="strana">Страна:</string>
    <string name="janr">Жанр:</string>
    <string name="view_string_button">смотреть фильм</string>
    <string name="loading_video">Загрузка…</string>
    <string name="string_pagination">1</string>
    <string name="url_main">https://hd.kinotac.net</string>
    <string name="next_page_string">следующая страница</string>
    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 YaBrowser/24.12.0.0 Safari/537.36</string>
    <string name="favorite">Избранное</string>
    <string name="string_comment">Комментарий</string>
    <string name="string_author">Автор</string>
</resources>