<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/main"
    tools:context=".activity.FullActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_test"
            android:layout_width="198dp"
            android:layout_height="297dp"
            android:src="@drawable/image"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="end"
        android:padding="5dp"
        android:layout_width="190dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/myTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/raiting" />

        <TextView
            android:id="@+id/myTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year" />

        <TextView
            android:id="@+id/myTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/age" />

        <TextView
            android:id="@+id/myTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/janr" />

        <TextView
            android:id="@+id/myTextView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/strana" />

        <TextView
            android:id="@+id/myTextView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/director" />

        <TextView
            android:id="@+id/myTextView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/role" />

        <TextView
            android:id="@+id/myTextView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/time" />

        <TextView
            android:id="@+id/myTextView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/premiera" />

    </LinearLayout>

</androidx.cardview.widget.CardView>