<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:stretchColumns="2">

    <ImageView
        android:id="@+id/view_image_full"
        android:layout_gravity="center"
        android:layout_width="173dp"
        android:layout_height="259dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/todo" />

    <TableRow>
<LinearLayout
    android:orientation="vertical"
    android:layout_gravity="start|center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/raiting" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/janr" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/year" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/age" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/strana" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/director" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/role" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_columnWeight="1"
        android:text="@string/premiera" />

</LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="start|center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/raitingTv"
                android:maxLength="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/janrTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/yearTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/ageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/stranaTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/directorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/roleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/timeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />

            <TextView
                android:id="@+id/premieraTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_columnWeight="1"
                android:text="@string/todo" />
        </LinearLayout>
    </TableRow>
</TableLayout>